--- a/index.html
+++ b/index.html
@@ -25,6 +25,26 @@
 
 <!-- this is a comment -->
 
+<table>
+<tr>
+	<th>Monday</th>
+	<th>Tuesday</th>
+	<th>Wednesday</th>
+	<th>Thursday</th>
+	<th>Friday</th>
+</tr>
+<tr>
+	<td>Work</td>
+	<td>Teach</td>
+	<td>Work</td>
+	<td>Mentor</td>
+	<td>Off</td>
+</tr>
+</table>
+
+<br/>
+<br/>
+
 <!-- <h4>Funny</h4> -->
 <img src="https://imgs.xkcd.com/comics/security.png" alt="xkcd pic"/>
 
