--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <h2>Stuff I like</h2> 
 <ul>
-<li>hanging out with <a href="http://avadreamsbig.github.io">Ava</a></li>
+<li>hanging out with <a href="http://avadreamsbig.github.io" target="_blank">Ava</a></li>
 <li>going to <a href="http://www.mountaincc.org">Mountain</a>
 <li><em>making</em> stuff with <a href="https://www.arduino.cc">Ardunio</a></li>  
 </ul>
